--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+<section class="container">
+  <div class="result-field">
+    <div class="result-images">
+      <span class="user-result">
+        <img src="images/player-question.jpg" alt="The player">
+      </span>
+      <span class="cpu-result">
+        <img src="images/cpu-question.jpg" alt="The cpu">
+      </span>
+    </div>
+    <div class="result">Free to play!</div>
+  </div>
+  <div class="options-img">
+    <span class="opt-img">
+      <img src="images/the-rock.png" alt="The rock">
+      <p>The Rock</p>
+    </span>
+    <span class="opt-img">
+      <img src="images/the-paper.jpg" alt="The paper">
+      <p>The Paper</p>
+    </span>
+    <span class="opt-img">
+      <img src="images/the-scissor.png" alt="The scissor">
+      <p>The Scissor</p>
+    </span>
+  </div>
+</section>
 </body>
 </html>
