No more bugs in the player select

--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
+<!-- Coding By CodingNepal - codingnepalweb.com -->
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock Paper Scissor</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<section class="container">
-  <div class="result-field">
-    <div class="result-images">
-      <span class="user-result">
-        <img src="images/player-question.jpg" alt="The player">
-      </span>
-      <span class="cpu-result">
-        <img src="images/cpu-question.jpg" alt="The cpu">
-      </span>
-    </div>
-    <div class="result">Free to play!</div>
-  </div>
-  <div class="options-img">
-    <span class="opt-img">
-      <img src="images/the-rock.png" alt="The rock">
-      <p>The Rock</p>
-    </span>
-    <span class="opt-img">
-      <img src="images/the-paper.jpg" alt="The paper">
-      <p>The Paper</p>
-    </span>
-    <span class="opt-img">
-      <img src="images/the-scissor.png" alt="The scissor">
-      <p>The Scissor</p>
-    </span>
-  </div>
-</section>
-<script src="app.js" defer></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <section class="container">
+      <div class="result_field">
+        <div class="result_images">
+          <span class="user_result">
+            <img src="images/player-question.jpg" alt="" />
+          </span>
+          <span class="cpu_result">
+            <img src="images/cpu-question.jpg" alt="" />
+          </span>
+        </div>
+        <div class="result">Let's Play!!</div>
+      </div>
+
+      <div class="option_images">
+        <span class="option_image">
+          <img src="images/the-rock.png" alt="" />
+          <p>Rock</p>
+        </span>
+        <span class="option_image">
+          <img src="images/the-paper.jpg" alt="" />
+          <p>Paper</p>
+        </span>
+        <span class="option_image">
+          <img src="images/the-scissor.png" alt="" />
+          <p>Scissors</p>
+        </span>
+      </div>
+    </section>
+
+   <script src="app.js" defer></script>
+  </body>
 </html>
