--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
   </head>
   <body>
     <section class="container">
-      <div class="result_field">
-        <div class="result_images">
-          <span class="user_result">
-            <img src="images/player-question.jpg" alt="" />
+      <div class="result-field">
+        <div class="result-images">
+          <span class="user-result">
+            <img src="images/cpu-question.jpg" alt="" />
           </span>
-          <span class="cpu_result">
+          <span class="cpu-result">
             <img src="images/cpu-question.jpg" alt="" />
           </span>
         </div>
         <div class="result">Let's Play!!</div>
       </div>
 
-      <div class="option_images">
-        <span class="option_image">
-          <img src="images/the-rock.png" alt="" />
+      <div class="option-images">
+        <span class="option-image">
+          <img src="images/the-rock.gif" alt="" />
           <p>Rock</p>
         </span>
-        <span class="option_image">
+        <span class="option-image">
           <img src="images/the-paper.jpg" alt="" />
           <p>Paper</p>
         </span>
-        <span class="option_image">
-          <img src="images/the-scissor.png" alt="" />
+        <span class="option-image">
+          <img src="images/the-scissor.jpg" alt="" />
           <p>Scissors</p>
         </span>
       </div>
