Changed base images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <div class="result-field">
         <div class="result-images">
           <span class="user-result">
-            <img src="images/cpu-question.jpg" alt="" />
+            <img src="images/cat-question.jpg" alt="" />
           </span>
           <span class="cpu-result">
-            <img src="images/cpu-question.jpg" alt="" />
+            <img src="images/cat-question.jpg" alt="" />
           </span>
         </div>
         <div class="result">Let's Play!!</div>
